Update TTL check for non-article